--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,24 +4,15 @@
     "node": true
   },
   "extends": [
-    "eslint:recommended",
-    "@typescript-eslint/recommended"
+    "eslint:recommended"
   ],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/explicit-function-return-type": "warn",
-    "@typescript-eslint/no-inferrable-types": "off",
-    "@typescript-eslint/prefer-const": "error",
-    "no-console": "warn"
+    "no-unused-vars": "warn",
+    "no-console": "off"
   },
   "ignorePatterns": [
     "dist/",
