--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "@/shared/*": ["src/shared/*"]
+      "@/tests/*": ["tests/*"],
+      "@/src/*": ["src/*"]
     },
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
