Add Swagger and postman tests

--- a/env.example
+++ b/env.example
@@ -1,4 +1,17 @@
-# Base de datos PostgreSQL
+# Configuración del ambiente
+NODE_ENV=development
+PORT=3000
+
+# Base de datos
+# Para development: SQLite por defecto, configurable con USE_SQLITE=false para PostgreSQL
+# Para test: SQLite por defecto, configurable con USE_POSTGRES=true para PostgreSQL
+# Para staging: PostgreSQL por defecto, configurable con USE_SQLITE=true para SQLite
+# Para production: Solo PostgreSQL (no permite SQLite)
+
+USE_SQLITE=true
+USE_POSTGRES=false
+
+# Configuración PostgreSQL
 PG_HOST=localhost
 PG_PORT=5432
 PG_USERNAME=postgres
@@ -10,9 +23,8 @@ PG_TEST_DATABASE=hexagonal_api_test
 JWT_SECRET=your-super-secret-jwt-key
 JWT_EXPIRES_IN=24h
 
-# Server
-PORT=3000
-NODE_ENV=development
+# CORS
+CORS_ORIGIN=*
 
 # Logging
 LOG_LEVEL=info
