Update project URL

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,10 @@ build/
 .env.test
 .env.production
 .env.staging
+env.development
+env.local
 env.staging
 env.production
-env.development
 env.test
 
 # Logs
