--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "test:postgres": "NODE_ENV=test USE_POSTGRES=true bun test",
     "test:watch": "NODE_ENV=test bun test --watch",
     "test:coverage": "NODE_ENV=test bun test --coverage",
-    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm": "typeorm-ts-node-commonjs -d migration.config.ts",
     "migration:generate": "bun run typeorm migration:generate",
     "migration:run": "bun run typeorm migration:run",
     "migration:run:prod": "NODE_ENV=production bun run typeorm migration:run",
     "migration:revert": "bun run typeorm migration:revert",
+    "migration:show": "bun run typeorm migration:show",
+    "migration:validate": "bun run scripts/validate-migrations.ts",
+    "migration:create": "bun run typeorm migration:create",
     "lint": "echo 'Linting disabled - TypeScript code is valid'",
     "lint:fix": "echo 'Linting disabled - TypeScript code is valid'",
     "format": "prettier --write src/**/*.ts"
@@ -62,6 +65,7 @@
     "prettier": "^3.1.1",
     "sinon": "^17.0.1",
     "supertest": "^6.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "keywords": [
