--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "dev:postgres": "NODE_ENV=development USE_SQLITE=false bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
     "start:dev": "NODE_ENV=development bun run src/index.ts",
-    "start:staging": "NODE_ENV=staging bun run src/index.ts",
+    "start:staging": "NODE_ENV=staging bun run dist/index.js",
     "start:prod": "NODE_ENV=production bun run src/index.ts",
-    "build": "bun build src/index.ts --outdir dist --target bun",
-    "build:prod": "NODE_ENV=production bun build src/index.ts --outdir dist --target bun",
+    "build": "bun build src/index.ts --target bun --outdir=dist --external sqlite3 --external pg --external bcrypt",
+    "build:prod": "NODE_ENV=production bun run build",
+    "build:staging": "NODE_ENV=staging bun run build",
+    "build:staging:full": "NODE_ENV=staging bun install && bun migration:run && bun run build:staging",
+    "build:prod:full": "NODE_ENV=production bun install && bun migration:run && bun run build:prod",
+    "build:with-migrations": "bun run migration:run && bun run build",
+    "start:dist": "bun run dist/index.js",
     "test": "NODE_ENV=test bun test",
     "test:postgres": "NODE_ENV=test USE_POSTGRES=true bun test",
     "test:watch": "NODE_ENV=test bun test --watch",
@@ -24,6 +29,7 @@
     "migration:show": "bun run typeorm migration:show",
     "migration:validate": "bun run scripts/validate-migrations.ts",
     "migration:create": "bun run typeorm migration:create",
+    "validate:build": "bun run scripts/validate-build.js",
     "lint": "echo 'Linting disabled - TypeScript code is valid'",
     "lint:fix": "echo 'Linting disabled - TypeScript code is valid'",
     "format": "prettier --write src/**/*.ts"
